--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
-body {
-  background: url("../assets/background.jpg") no-repeat center center fixed;
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+body .contenedor-principal {
+  display: flex;
+  width: 100%;
+  margin: 15px;
 }
-
-h1 {
-  background-color: blue;
+body .formulario {
+  flex: 1;
+  max-width: 33%;
+  box-sizing: border-box;
+}
+body .formulario .seccion-formulario label {
+  display: block;
+  margin-bottom: 5px;
+}
+body .formulario .seccion-formulario input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
