--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,25 @@
 body {
-    background: url('../assets/background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
+    .contenedor-principal {
+        display: flex;
+        width: 100%;
+        margin: 15px;
+    }
+    .formulario {
+        flex: 1;
+        max-width: 33%;
+        box-sizing: border-box;
 
-h1 {
-    background-color: blue;
+
+        .seccion-formulario label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .seccion-formulario input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+            display: block;
+        }
+    }
 }
