--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,25 +1,31 @@
 body {
-    .contenedor-principal {
+    padding: 15px;
+    background-color: #2C1C37;
+    color: #EAFF6A;
+}
+
+.formulario-resultados {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    width: 100%;
+    gap: 20px;
+}
+.formulario {
+    grid-column: 1/2;
+    margin-right: 15px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5%;
+    padding: 20px;
+
+    .seccion-formulario {
         display: flex;
-        width: 100%;
-        margin: 15px;
-    }
-    .formulario {
-        flex: 1;
-        max-width: 33%;
-        box-sizing: border-box;
-
-
-        .seccion-formulario label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .seccion-formulario input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            display: block;
-        }
+        flex-direction: column;
+        padding: 10px;
     }
 }
+.resultados {
+    grid-column: 2/3;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5%;
+}
+
