--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,33 @@
-body .contenedor-principal {
+body {
+  padding: 15px;
+  background-color: #2C1C37;
+  color: #EAFF6A;
+}
+
+.formulario-resultados {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  width: 100%;
+  gap: 20px;
+}
+
+.formulario {
+  grid-column: 1/2;
+  margin-right: 15px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5%;
+  padding: 20px;
+}
+.formulario .seccion-formulario {
   display: flex;
-  width: 100%;
-  margin: 15px;
+  flex-direction: column;
+  padding: 10px;
 }
-body .formulario {
-  flex: 1;
-  max-width: 33%;
-  box-sizing: border-box;
-}
-body .formulario .seccion-formulario label {
-  display: block;
-  margin-bottom: 5px;
-}
-body .formulario .seccion-formulario input {
-  width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
-  display: block;
+
+.resultados {
+  grid-column: 2/3;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5%;
 }
 
 /*# sourceMappingURL=style.css.map */
