--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@ body {
 }
 
 .formulario-resultados {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  display: flex;
   width: 100%;
   gap: 20px;
 }
@@ -17,6 +16,7 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 5%;
   padding: 20px;
+  width: 30%;
 }
 .formulario .seccion-formulario {
   display: flex;
@@ -28,6 +28,7 @@ body {
   grid-column: 2/3;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 5%;
+  width: 70%;
 }
 
 /*# sourceMappingURL=style.css.map */
