--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,8 +6,7 @@ body {
 }
 
 .formulario-resultados {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
     width: 100%;
     gap: 20px;
 }
@@ -17,6 +16,7 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 5%;
     padding: 20px;
+    width: 30% ;
 
     .seccion-formulario {
         display: flex;
@@ -28,5 +28,6 @@ body {
     grid-column: 2/3;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 5%;
+    width: 70%;
 }
 
