--- a/css/style.css
+++ b/css/style.css
@@ -31,17 +31,20 @@ body {
   width: 70%;
 }
 
-.container {
+#container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 10px;
 }
 
 .planeta {
   display: flex;
-  width: 25%;
-  padding: 10px;  
+  width: 30%;
   justify-content: center;
   align-items: center;
+  background-color: #2B0D32;
+  border-radius: 10%;
+  margin: 10px;
 }
 /*# sourceMappingURL=style.css.map */
