Barra de busqueda y estilos

--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,9 @@ body {
   border-radius: 10%;
   margin: 10px;
 }
+
+.barra {
+  display: flex;
+  justify-content: center;
+}
 /*# sourceMappingURL=style.css.map */
